set text in strong tag to be bold

--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,12 @@ blockquote {
     margin-bottom: 0; }
 
 /**
+ * Set text in `strong` tag to be bold
+ */
+strong {
+  font-weight: bold; }
+
+/**
  * Code formatting
  */
 pre,
