add image property in post content

--- a/css/main.css
+++ b/css/main.css
@@ -315,6 +315,14 @@ pre {
       .post-content h4 {
         font-size: 18px; } }
 
+/*
+ * Image property in post content
+ */
+.center-image {
+  margin: 0 auto;
+  display: block;
+}
+
 /**
  * Syntax highlighting styles
  */
