--- a/css/main.css
+++ b/css/main.css
@@ -323,6 +323,13 @@ pre {
   display: block;
 }
 
+/*
+ * Footnotes
+ */
+.footnotes {
+  font-size: 14px;
+}
+
 /**
  * Syntax highlighting styles
  */
