--- a/css/main.css
+++ b/css/main.css
@@ -218,7 +218,8 @@ pre {
  * Site footer
  */
 .site-footer {
-  border-top: 1px solid #e8e8e8;
+  background-color: #ececec;
+  border-top: 2px solid #e8e8e8;
   padding: 30px 0; }
 
 .footer-heading {
@@ -283,7 +284,7 @@ pre {
 
 .post-meta {
   font-size: 14px;
-  color: #828282; }
+  color: #727578; }
 
 .post-link {
   display: block;
